# Flyan

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  release-please-config.json  server.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  endpoint_change.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml
docs/: internal-api-spec.md
flyan/: __init__.py  async_client.py  currencies.json  mcp_server.py  misc.py  ryanair.py  stations.json  tracker.py  transport.py  wire.py
tests/: test_explore.py  test_mcp_server.py  test_transport.py  test_version.py  test_wire.py
