[project]
name = "Flyan"
version = "0.3.0"
description = "Open source unofficial API wrappper to get flight data from RyanAir."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.0",
]

[project.scripts]
flyan-mcp = "flyan.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
